Remove no longer needed -XX:MaxPermSize configs (#482)
* deprecated in JDK 8 (e.g. has no effect) and
   removed in JDK 9 (build fails)