@@ -109,7 +109,6 @@
               <exclude>**/*AbstractTest.java</exclude>
               <exclude>**/*JMS*Test.java</exclude>
             </excludes>
-            <argLine>-Xmx1024m -XX:MaxPermSize=128m</argLine>
             <additionalClasspathElements>
               <additionalClasspathElement>${maven.jdbc.driver.jar}</additionalClasspathElement>
             </additionalClasspathElements>
